Reintroducing spring-instrument.jar use