@@ -95,7 +95,10 @@ buildWithMaven() {
       -Dmaven.test.skip=true \
       -Dbuild.version="${UPCOMING_POM_VERSION}" \
       -Dbuild.bu.git.ref="git:branch=${GIT_BRANCH},ref=${GIT_COMMIT}" \
-      -Dclean-jsfrontend-node.off
+      -Dclean-jsfrontend-node.off \
+      -Xmx3072m \
+      -Xms512m \
+      -XX:MaxPermSize=256m
   )
 
   warExists && true || false
